fix rss problem

--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ lang: "hu"
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: http://feeds.feedburner.com/devFolyaminfo
-subscribe_email: http://feedburner.google.com/fb/a/mailverify?uri=devFolyaminfo&loc=hu_HU
+subscribe_rss: http://feeds.feedburner.com/Folyaminfo
+subscribe_email: http://feedburner.google.com/fb/a/mailverify?uri=Folyaminfo&loc=hu_HU
 # RSS feeds can list your email address if you like
 email:
 
