add Google+ Comments

--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: "yitsushigithub"
-disqus_show_comment_count: false
+#disqus_short_name: "yitsushigithub"
+#disqus_show_comment_count: false
+
+# Google+ Comment
+google_comments: true
 
 # Google Analytics
 google_analytics_tracking_id: "UA-33446239-1"
